src/main/java/model/match/CellAlreadyShottedException.java - Modified constructor.